<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MyActivity">

    <TextView
        android:text="@string/math_problem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="40sp"/>
    <Button
            android:id="@+id/btnCalc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:text="@string/phase_1_solve_it"/>
    <TextView
            android:id="@+id/txtPhase1Result"
            android:text="@string/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:textSize="30sp"/>
    <Button
            android:id="@+id/btnDivideByZero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:enabled="false"
            android:text="@string/phase_2_divide_by_0"/>
    <TextView
            android:id="@+id/txtPhase2Result"
            android:text="@string/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:enabled="false"
            android:textSize="30sp"/>
    <Button
            android:id="@+id/btnPower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:enabled="false"
            android:text="@string/phase_3_power"/>
    <TextView
            android:id="@+id/txtPhase3Result"
            android:text="@string/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:enabled="false"
            android:textSize="30sp"/>

</LinearLayout>
